<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.jenkins-ci.plugins</groupId>
    <artifactId>plugin</artifactId>
    <version>1.509.4</version>
    <relativePath></relativePath>
  </parent>

  <groupId>com.blackducksoftware.integration</groupId>
  <artifactId>protex-jenkins</artifactId>
  <version>1.4.3-SNAPSHOT</version>
  <packaging>hpi</packaging>

  <name>BD Protex Plugin for Jenkins CI</name>
  <description>Automate Open Source discovery with Black Duck Protex (TM). 
Automate Protex Analysis as part of your build job. Create projects in Protex as needed and fail the build if Protex analysis is not clean.</description>
  <url>https://blackducksoftware.atlassian.net/wiki/display/BDOS/Black+Duck+Protex+Plugin</url>
  <inceptionYear>2014</inceptionYear>
  <organization>
    <name>Black Duck Software, Inc.</name>
    <url>http://www.blackducksoftware.com/</url>
  </organization>
  <licenses>
    <license>
      <name>Apache License 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>blackduckoss</id>
      <name>Black Duck OSS</name>
      <email>bdsoss@blackducksoftware.com</email>
      <organization>Black Duck Software, Inc.</organization>
      <organizationUrl>http://www.blackducksoftware.com</organizationUrl>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>America/New_York</timezone>
    </developer>
  </developers>

  <distributionManagement>
    <repository>
      <id>${repo-id}</id>
      <url>${repo-url}</url>
    </repository>
    <snapshotRepository>
      <id>artifactory.blackducksoftware.com</id>
      <url>https://test-repo.blackducksoftware.com/artifactory/bds-jenkins-protex-plugins-snapshot</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>
    <cxf.version>2.7.14</cxf.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <slf4j.version>1.7.5</slf4j.version>
    <spring.version>3.0.6.RELEASE</spring.version>
  </properties>

  <repositories>
    <repository>
      <id>repo.jenkins-ci.org</id>
      <url>http://repo.jenkins-ci.org/public/</url>
    </repository>
    <repository>
      <id>jcenter</id>
      <url>https://jcenter.bintray.com</url>
    </repository>
    <repository>
      <snapshots>
        <updatePolicy>always</updatePolicy>
      </snapshots>
      <id>bds-int-public</id>
      <url>https://updates.suite.blackducksoftware.com/integrations/</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>repo.jenkins-ci.org</id>
      <url>http://repo.jenkins-ci.org/public/</url>
    </pluginRepository>
  </pluginRepositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.codehaus.woodstox</groupId>
        <artifactId>stax2-api</artifactId>
        <version>3.1.4</version>
      </dependency>
      <dependency>
        <groupId>org.codehaus.woodstox</groupId>
        <artifactId>woodstox-core-asl</artifactId>
        <version>4.4.1</version>
      </dependency>
      <dependency>
        <groupId>org.apache.cxf</groupId>
        <artifactId>cxf-tools-common</artifactId>
        <version>${cxf.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.cxf</groupId>
        <artifactId>cxf-rt-bindings-soap</artifactId>
        <version>${cxf.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.cxf</groupId>
        <artifactId>cxf-rt-ws-policy</artifactId>
        <version>${cxf.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.cxf</groupId>
        <artifactId>cxf-rt-ws-security</artifactId>
        <version>2.7.10</version>
      </dependency>
      <dependency>
        <groupId>org.apache.cxf</groupId>
        <artifactId>cxf-api</artifactId>
        <version>${cxf.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.cxf</groupId>
        <artifactId>cxf-rt-frontend-jaxws</artifactId>
        <version>${cxf.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.cxf</groupId>
        <artifactId>cxf-rt-core</artifactId>
        <version>${cxf.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.cxf</groupId>
        <artifactId>cxf-rt-transports-http</artifactId>
        <version>${cxf.version}</version>
      </dependency>
      <dependency>
        <groupId>com.sun.xml.messaging.saaj</groupId>
        <artifactId>saaj-impl</artifactId>
        <version>1.3</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>javax.xml.soap</groupId>
        <artifactId>javax.xml.soap-api</artifactId>
        <version>1.3.5</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-core</artifactId>
        <version>${spring.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-web</artifactId>
        <version>${spring.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-jdbc</artifactId>
        <version>${spring.version}</version>
        <scope>provided</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>com.blackducksoftware.integration</groupId>
      <artifactId>phone-home-api</artifactId>
      <version>1.1.7</version>
    </dependency>
    <dependency>
      <groupId>com.blackducksoftware.plugins</groupId>
      <artifactId>protex-plugin-integration</artifactId>
      <version>1.8.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>com.blackducksoftware.integration</groupId>
      <artifactId>protex-common</artifactId>
      <version>1.1.9-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>com.blackducksoftware.integration</groupId>
      <artifactId>suite-common</artifactId>
      <version>1.0.3</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.3.2</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.2</version>
    </dependency>
    <dependency>
      <groupId>org.jenkins-ci.plugins</groupId>
      <artifactId>credentials</artifactId>
      <version>[1.9.4,1.18],[1.20,1.27)</version>
    </dependency>
    <dependency>
      <groupId>org.jvnet.localizer</groupId>
      <artifactId>localizer</artifactId>
      <version>1.10</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>10.0.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jenkins-ci.main</groupId>
      <artifactId>remoting</artifactId>
      <version>2.32</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.kohsuke.stapler</groupId>
      <artifactId>json-lib</artifactId>
      <version>2.4-jenkins-1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.kohsuke.stapler</groupId>
      <artifactId>stapler</artifactId>
      <version>1.218</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.10</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>1.8.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>xml-apis</groupId>
      <artifactId>xml-apis</artifactId>
      <version>1.3.04</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <filtering>true</filtering>
        <directory>src/main/resources</directory>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <encoding>UTF-8</encoding>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-Dfile.encoding=UTF-8 -Xms512m -Xmx512m
						-XX:MaxPermSize=128m ${argLine}</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jenkins-ci.tools</groupId>
        <artifactId>maven-hpi-plugin</artifactId>
        <configuration>
          <pluginFirstClassLoader>true</pluginFirstClassLoader>
          <hpiName>${project.artifactId}-${project.version}</hpiName>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>add-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-sources/localizer/</source>
                <source>${project.build.directory}/generated-sources/annotations/</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-eclipse-plugin</artifactId>
        <configuration>
          <classpathContainers>
            <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/Java
							SE-1.7</classpathContainer>
          </classpathContainers>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <descriptor>src/assembly/distribution-zip.xml</descriptor>
          <finalName>${project.artifactId}-${project.version}</finalName>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.7.4.201502262128</version>
        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>default-report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.github.ekryd.sortpom</groupId>
        <artifactId>sortpom-maven-plugin</artifactId>
        <version>2.4.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>sort</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <encoding>${project.build.sourceEncoding}</encoding>
          <sortProperties>true</sortProperties>
          <keepBlankLines>true</keepBlankLines>
          <sortDependencies>scope</sortDependencies>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>tidy-maven-plugin</artifactId>
        <version>1.0.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>pom</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>jenkins-integration</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <filters>
          <filter>internal.properties</filter>
        </filters>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.16</version>
            <configuration>
              <argLine>-Dfile.encoding=UTF-8 -Xms512m -Xmx512m ${argLine}</argLine>
              <skipTests>${skip.unit.tests}</skipTests>
              <excludes>
                <exclude>**/com/blackducksoftware/integration/protex/release/PluginReleaseTest.java</exclude>
              </excludes>
            </configuration>
          </plugin>
        </plugins>
      </build>
      <properties>
        <repo-id>bds-artifactory</repo-id>
        <repo-url>https://test-repo.blackducksoftware.com/artifactory/bds-jenkins-protex-plugins</repo-url>
      </properties>
    </profile>
    <profile>
      <id>jenkins-production-integration</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <filters>
          <filter>deployment.properties</filter>
        </filters>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.16</version>
            <configuration>
              <argLine>-Dfile.encoding=UTF-8 -Xms512m -Xmx512m ${argLine}</argLine>
              <includes>
                <include>**/PluginReleaseTest.java</include>
              </includes>
              <skipTests>${skip.unit.tests}</skipTests>
              <excludes>
                <exclude>**/com/blackducksoftware/integration/protex/release/PluginSnapShotTest.java</exclude>
              </excludes>
            </configuration>
          </plugin>
          <plugin>
            <groupId>com.github.ekryd.sortpom</groupId>
            <artifactId>sortpom-maven-plugin</artifactId>
            <version>2.4.0</version>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>sort</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <encoding>${project.build.sourceEncoding}</encoding>
              <sortProperties>true</sortProperties>
              <keepBlankLines>true</keepBlankLines>
              <sortDependencies>scope</sortDependencies>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>tidy-maven-plugin</artifactId>
            <version>1.0.0</version>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>pom</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
      <properties>
        <repo-id>suiterepo</repo-id>
        <repo-url>https://test-repo.blackducksoftware.com/artifactory/bds-jenkins-protex-plugins</repo-url>
      </properties>
    </profile>
  </profiles>
</project>
